[package]
name = "ic_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.6"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-types = "0.7.0"
serde = "1.0.126"
serde_derive = "1.0.126"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"